# jags-cddm

./: .gitignore  AUTHORS  CITATION.cff  Makefile.am  README  README.md  Vagrantfile  configure.ac  makedcddm.sh
dev/: rvonmises.cpp  test_vonmises.R
helpers/MATLAB/: approximation.m  main.m
helpers/MATLAB/@cddm/: cddm.m
m4/: Makefile.am  Makefile.in
src/: Makefile.am  cddm.cc
src/distributions/: DCDDM.cc  DCDDM.h  DCDDMCARTN.cc  DCDDMCARTN.h  DCDDMPOLAR.cc  DCDDMPOLAR.h  Makefile.am
test/: cddm.bug  cddm.cmd  cddm.data  ezcdm.R
win/: Makefile.am  Makefile.in  MultiUser64.nsh  README.WIN  jags.nsi
